fonts added to project

--- a/frontend/app/locales/en/experience.json
+++ b/frontend/app/locales/en/experience.json
@@ -1,4 +1,9 @@
 {
   "title": "Experience & Education",
-  "description": "My professional journey and educational background in software development."
+  "description": "My professional journey and educational background in software development.",
+  "sections": {
+    "experience": "Work Experience",
+    "education": "Education",
+    "certifications": "Certifications"
+  }
 }
