--- a/frontend/app/locales/en/projects.json
+++ b/frontend/app/locales/en/projects.json
@@ -1,4 +1,7 @@
 {
   "title": "Featured Projects",
-  "description": "Here are some of my recent projects that showcase my skills and passion for frontend development."
+  "description": "Here are some of my recent projects that showcase my skills and passion for frontend development.",
+  "buttons": {
+    "liveDemo": "Live Demo"
+  }
 }
