--- a/frontend/app/locales/fa/experience.json
+++ b/frontend/app/locales/fa/experience.json
@@ -1,4 +1,9 @@
 {
   "title": "تجربه و تحصیلات",
-  "description": "مسیر حرفه‌ای من و پیشینه تحصیلی در توسعه نرم‌افزار."
+  "description": "مسیر حرفه‌ای من و پیشینه تحصیلی در توسعه نرم‌افزار.",
+  "sections": {
+    "experience": "تجربه کاری",
+    "education": "تحصیلات",
+    "certifications": "گواهینامه‌ها"
+  }
 }
