--- a/frontend/app/locales/fa/projects.json
+++ b/frontend/app/locales/fa/projects.json
@@ -1,4 +1,7 @@
 {
   "title": "پروژه‌های برجسته",
-  "description": "در اینجا چند نمونه از پروژه‌های اخیر من وجود دارد که مهارت و اشتیاق من به توسعه فرانت‌اند را نشان می‌دهند."
+  "description": "در اینجا چند نمونه از پروژه‌های اخیر من وجود دارد که مهارت و اشتیاق من به توسعه فرانت‌اند را نشان می‌دهند.",
+  "buttons": {
+    "liveDemo": "دموی زنده"
+  }
 }
