--- a/frontend/app/locales/fa/theme.json
+++ b/frontend/app/locales/fa/theme.json
@@ -1,4 +1,55 @@
 {
-  "dark": "تاریک",
-  "light": "روشن"
+  "title": "تنظیمات پوسته",
+  "description": "رنگ‌بندی مورد علاقه‌تان را انتخاب کنید",
+  "active": "فعال",
+  "preference_note": "ترجیحات پوسته به صورت محلی ذخیره می‌شود",
+  "random": "تصادفی",
+  "colors": "رنگ‌ها",
+  "mode": "حالت",
+  "available": "قابل انتخاب",
+  "current": "فعلی",
+  "display_mode": "حالت نمایش",
+  "color_schemes": "طرح‌های رنگی",
+  "color_description": "پالت رنگی مورد علاقه خود را انتخاب کنید",
+  "current_scheme": "فعلی",
+  "theme_count": "{{count}} تم",
+  "schemes": {
+    "blue": {
+      "name": "آبی اقیانوسی",
+      "description": "حسی خنک و حرفه‌ای از اقیانوس"
+    },
+    "purple": {
+      "name": "بنفش سلطنتی",
+      "description": "تمی خلاقانه و باشکوه"
+    },
+    "green": {
+      "name": "سبز جنگلی",
+      "description": "احساس طبیعی و آرامش‌بخش"
+    },
+    "orange": {
+      "name": "نارنجی غروب",
+      "description": "گرم و پرانرژی مثل غروب خورشید"
+    },
+    "pink": {
+      "name": "شکوفه گیلاس",
+      "description": "لطیف و رمانتیک"
+    },
+    "teal": {
+      "name": "فیروزه‌ای استوایی",
+      "description": "مدرن و تازه مانند مناطق استوایی"
+    },
+    "indigo": {
+      "name": "نیلی نیمه‌شب",
+      "description": "عمیق و رازآلود مانند شب"
+    },
+    "amber": {
+      "name": "کهربایی طلایی",
+      "description": "لوکس و پر زرق‌وبرق"
+    }
+  },
+  "options": {
+    "light": "روشن",
+    "dark": "تاریک",
+    "system": "سیستم"
+  }
 }
