submissions in admin section is multilingual now

--- a/frontend/app/locales/fa/navigation.json
+++ b/frontend/app/locales/fa/navigation.json
@@ -1,6 +1,6 @@
 {
   "dashboard": "داشبورد",
-  "submission": "ارسال‌ها",
+  "submission": "پیام ها",
   "contactInfo": "اطلاعات تماس",
   "contact": "ارتباط",
   "hero": "خانه",
