select option ui should be better

--- a/frontend/app/locales/en/dashboard.json
+++ b/frontend/app/locales/en/dashboard.json
@@ -22,5 +22,10 @@
     "Delete": "Delete",
     "DeleteSuccess": "Submission deleted.",
     "DeleteFail": "Failed to delete submission."
+  },
+  "language": {
+    "SelectLanguage": "Select Language",
+    "English": "English",
+    "Persian": "Persian"
   }
 }
