multilingual is almost every where now

--- a/frontend/app/locales/en/dashboard.json
+++ b/frontend/app/locales/en/dashboard.json
@@ -7,7 +7,33 @@
   "About Features": "About Features",
   "Not Set": "Not Set",
   "Manage": "Manage",
-  "experience": { "RecentExperiences": "Recent Experiences" },
+  "experience": {
+    "RecentExperiences": "Recent Experiences",
+    "Title": "Experience & Education Editor",
+    "Experiences": "Experiences",
+    "Education": "Education",
+    "Certifications": "Certifications",
+    "TitlePlaceholder": "Title",
+    "Company": "Company",
+    "Period": "Period",
+    "Description": "Description",
+    "Technologies": "Technologies (comma separated)",
+    "Remove": "Remove",
+    "Add": "+ Add",
+    "Degree": "Degree",
+    "School": "School",
+    "CertificateName": "Certificate Name",
+    "Organization": "Organization",
+    "Year": "Year",
+    "Save": "Save Changes",
+    "UpdateSuccess": "Experience data updated.",
+    "UpdateError": "Failed to update experience data."
+  },
+  "language": {
+    "SelectLanguage": "Select Language",
+    "English": "English",
+    "Persian": "Persian"
+  },
   "submissions": {
     "RecentContactSubmissions": "Recent Contact Submissions",
     "Name": "Name",
@@ -23,9 +49,80 @@
     "DeleteSuccess": "Submission deleted.",
     "DeleteFail": "Failed to delete submission."
   },
-  "language": {
-    "SelectLanguage": "Select Language",
+  "contact": {
+    "EditContactInformation": "Edit Contact Information",
+    "Email": "Email",
+    "Phone": "Phone",
+    "Location": "Location",
+    "SocialLinks": "Social Links",
+    "GitHub": "GitHub",
+    "GitHubURL": "GitHub URL",
+    "LinkedIn": "LinkedIn",
+    "LinkedInURL": "LinkedIn URL",
+    "Twitter": "Twitter",
+    "TwitterURL": "Twitter URL",
+    "SaveChanges": "Save Changes",
+    "FailedToLoad": "Failed to load contact info",
+    "UpdateSuccess": "Contact info updated.",
+    "UpdateFail": "Failed to update contact info."
+  },
+  "hero": {
+    "Title": "Edit Hero Info",
+    "LoadError": "Failed to load hero data.",
+    "Name": "Name",
+    "Initials": "Initials",
+    "Roles": "Roles (comma-separated)",
+    "RolesPlaceholder": "e.g. Developer, Designer, Freelancer",
+    "Bio": "Bio",
+    "Save": "Save Changes",
+    "ResumeTitle": "Resume (English & Persian)",
     "English": "English",
-    "Persian": "Persian"
+    "Persian": "Persian",
+    "Resume": "Resume",
+    "Upload": "Upload",
+    "Download": "Download",
+    "UploadResumeSuccess": "{{lang}} resume uploaded successfully.",
+    "UploadResumeError": "Failed to upload {{lang}} resume.",
+    "UpdateSuccess": "Hero info updated successfully.",
+    "UpdateError": "Failed to update hero info."
+  },
+  "about": {
+    "UpdateSuccess": "About info updated successfully.",
+    "UpdateError": "Failed to update about info.",
+    "Description": "Description",
+    "AddDescription": "+ Add Description",
+    "Skills": "Skills",
+    "AddSkill": "+ Add Skill",
+    "Features": "Features",
+    "AddFeature": "+ Add Feature",
+    "RemoveFeature": "− Remove Feature",
+    "Save": "Save Changes"
+  },
+  "skills": {
+    "title": "Skills Editor",
+    "addCategory": "Add Category",
+    "removeCategory": "Remove Category",
+    "addSkill": "Add Skill",
+    "removeSkill": "Remove",
+    "save": "Save Changes",
+    "skillName": "Skill Name",
+    "skillLevel": "Level",
+    "error": "Error loading skills",
+    "successUpdate": "Skills updated successfully.",
+    "errorUpdate": "Failed to update skills."
+  },
+  "projects": {
+    "Title": "Projects Editor",
+    "PlaceholderTitle": "Project Title",
+    "PlaceholderDescription": "Description",
+    "PlaceholderImage": "Image URL",
+    "PlaceholderLiveUrl": "Live URL",
+    "PlaceholderGithubUrl": "GitHub URL",
+    "PlaceholderTechnologies": "Technologies (comma separated)",
+    "AddProject": "+ Add Project",
+    "RemoveProject": "Remove Project",
+    "Save": "Save Changes",
+    "UpdateSuccess": "Projects info updated.",
+    "UpdateError": "Failed to update projects info."
   }
 }
