--- a/frontend/app/locales/fa/dashboard.json
+++ b/frontend/app/locales/fa/dashboard.json
@@ -7,7 +7,33 @@
   "About Features": "ویژگی‌های درباره من",
   "Not Set": "تنظیم نشده",
   "Manage": "مدیریت",
-  "experience": { "RecentExperiences": "تجربه های اخیر" },
+  "experience": {
+    "RecentExperiences": "تجربه های اخیر",
+    "Title": "ویرایش تجربه و تحصیلات",
+    "Experiences": "تجربه‌ها",
+    "Education": "تحصیلات",
+    "Certifications": "گواهینامه‌ها",
+    "TitlePlaceholder": "عنوان",
+    "Company": "شرکت",
+    "Period": "دوره زمانی",
+    "Description": "توضیحات",
+    "Technologies": "تکنولوژی‌ها (با کاما جدا کنید)",
+    "Remove": "حذف",
+    "Add": "+ افزودن",
+    "Degree": "مدرک تحصیلی",
+    "School": "دانشگاه یا مدرسه",
+    "CertificateName": "نام گواهینامه",
+    "Organization": "سازمان صادرکننده",
+    "Year": "سال",
+    "Save": "ذخیره تغییرات",
+    "UpdateSuccess": "اطلاعات تجربه با موفقیت به‌روزرسانی شد.",
+    "UpdateError": "خطا در به‌روزرسانی اطلاعات تجربه."
+  },
+  "language": {
+    "SelectLanguage": "انتخاب زبان",
+    "English": "انگلیسی",
+    "Persian": "فارسی"
+  },
   "submissions": {
     "RecentContactSubmissions": "پیام های اخیر",
     "Name": "نام",
@@ -23,9 +49,80 @@
     "DeleteSuccess": "پیام با موفقیت حذف شد.",
     "DeleteFail": "حذف پیام ناموفق بود."
   },
-  "language": {
-    "SelectLanguage": "انتخاب زبان",
+  "contact": {
+    "EditContactInformation": "ویرایش اطلاعات تماس",
+    "Email": "ایمیل",
+    "Phone": "شماره تلفن",
+    "Location": "موقعیت مکانی",
+    "SocialLinks": "شبکه‌های اجتماعی",
+    "GitHub": "گیت‌هاب",
+    "GitHubURL": "آدرس گیت‌هاب",
+    "LinkedIn": "لینکدین",
+    "LinkedInURL": "آدرس لینکدین",
+    "Twitter": "توییتر",
+    "TwitterURL": "آدرس توییتر",
+    "SaveChanges": "ذخیره تغییرات",
+    "FailedToLoad": "بارگذاری اطلاعات تماس با خطا مواجه شد",
+    "UpdateSuccess": "اطلاعات تماس با موفقیت به‌روزرسانی شد.",
+    "UpdateFail": "خطا در به‌روزرسانی اطلاعات تماس."
+  },
+  "hero": {
+    "Title": "ویرایش اطلاعات معرفی",
+    "LoadError": "خطا در بارگذاری اطلاعات معرفی",
+    "Name": "نام",
+    "Initials": "حروف اختصاری",
+    "Roles": "نقش‌ها (با ویرگول جدا شوند)",
+    "RolesPlaceholder": "مثلاً توسعه‌دهنده، طراح، فریلنسر",
+    "Bio": "بیوگرافی",
+    "Save": "ذخیره تغییرات",
+    "ResumeTitle": "رزومه (انگلیسی و فارسی)",
     "English": "انگلیسی",
-    "Persian": "فارسی"
+    "Persian": "فارسی",
+    "Resume": "رزومه",
+    "Upload": "آپلود",
+    "Download": "دانلود",
+    "UploadResumeSuccess": "رزومه {{lang}} با موفقیت آپلود شد.",
+    "UploadResumeError": "آپلود رزومه {{lang}} انجام نشد.",
+    "UpdateSuccess": "اطلاعات هیرو با موفقیت بروزرسانی شد.",
+    "UpdateError": "بروزرسانی اطلاعات هیرو انجام نشد."
+  },
+  "about": {
+    "UpdateSuccess": "اطلاعات درباره با موفقیت بروزرسانی شد.",
+    "UpdateError": "بروزرسانی اطلاعات درباره انجام نشد.",
+    "Description": "توضیحات",
+    "AddDescription": "افزودن توضیح",
+    "Skills": "مهارت‌ها",
+    "AddSkill": "افزودن مهارت",
+    "Features": "ویژگی‌ها",
+    "AddFeature": "افزودن ویژگی",
+    "RemoveFeature": "حذف ویژگی",
+    "Save": "ذخیره تغییرات"
+  },
+  "skills": {
+    "title": "ویرایش مهارت‌ها",
+    "addCategory": "افزودن دسته‌بندی",
+    "removeCategory": "حذف دسته‌بندی",
+    "addSkill": "افزودن مهارت",
+    "removeSkill": "حذف",
+    "save": "ذخیره تغییرات",
+    "skillName": "نام مهارت",
+    "skillLevel": "سطح",
+    "error": "خطا در بارگذاری مهارت‌ها",
+    "successUpdate": "مهارت‌ها با موفقیت ذخیره شدند.",
+    "errorUpdate": "ذخیره مهارت‌ها با خطا مواجه شد."
+  },
+  "projects": {
+    "Title": "ویرایش پروژه‌ها",
+    "PlaceholderTitle": "عنوان پروژه",
+    "PlaceholderDescription": "توضیحات پروژه",
+    "PlaceholderImage": "آدرس تصویر",
+    "PlaceholderLiveUrl": "لینک نمایش زنده",
+    "PlaceholderGithubUrl": "لینک گیت‌هاب",
+    "PlaceholderTechnologies": "تکنولوژی‌ها (با کاما جدا کنید)",
+    "AddProject": "+ افزودن پروژه",
+    "RemoveProject": "حذف پروژه",
+    "Save": "ذخیره تغییرات",
+    "UpdateSuccess": "اطلاعات پروژه‌ها با موفقیت به‌روزرسانی شد.",
+    "UpdateError": "خطا در به‌روزرسانی اطلاعات پروژه‌ها."
   }
 }
