--- a/frontend/app/locales/en/navigation.json
+++ b/frontend/app/locales/en/navigation.json
@@ -8,6 +8,7 @@
   "skills": "Skills",
   "projects": "Projects",
   "experiences": "Experiences",
+  "suggestions": "Suggestions",
   "name": "Alex Johnson",
   "adminPanel": "Admin Panel",
   "managementDashboard": "Management Dashboard",
