--- a/frontend/app/locales/fa/dashboard.json
+++ b/frontend/app/locales/fa/dashboard.json
@@ -124,5 +124,18 @@
     "Save": "ذخیره تغییرات",
     "UpdateSuccess": "اطلاعات پروژه‌ها با موفقیت به‌روزرسانی شد.",
     "UpdateError": "خطا در به‌روزرسانی اطلاعات پروژه‌ها."
+  },
+  "suggestions": {
+    "title": "مدیریت پیشنهادها",
+    "description": "برچسب‌ها، تکنولوژی‌ها یا کلمات کلیدی مرتبط را برای بهبود دسته‌بندی محتوا اضافه یا حذف کنید.",
+    "placeholder": "پیشنهاد جدید را وارد کنید...",
+    "add": "افزودن",
+    "adding": "در حال افزودن...",
+    "added": "پیشنهاد اضافه شد!",
+    "errorAdding": "افزودن پیشنهاد با خطا مواجه شد.",
+    "deleting": "در حال حذف...",
+    "deleted": "پیشنهاد حذف شد!",
+    "errorDeleting": "حذف پیشنهاد با خطا مواجه شد.",
+    "deleteItem": "حذف {{name}}"
   }
 }
