--- a/frontend/app/locales/fa/navigation.json
+++ b/frontend/app/locales/fa/navigation.json
@@ -8,6 +8,7 @@
   "skills": "مهارت‌ها",
   "projects": "پروژه‌ها",
   "experiences": "تجربه‌ها",
+  "suggestions": "پیشنهادها",
   "name": "الکس جانسون",
   "adminPanel": "پنل مدیریت",
   "managementDashboard": "داشبورد مدیریتی",
