course word replaced certification

--- a/frontend/app/locales/en/dashboard.json
+++ b/frontend/app/locales/en/dashboard.json
@@ -12,7 +12,7 @@
     "Title": "Experience & Education Editor",
     "Experiences": "Experiences",
     "Education": "Education",
-    "Certifications": "Certifications",
+    "Courses": "Courses",
     "TitlePlaceholder": "Title",
     "Company": "Company",
     "Period": "Period",
@@ -22,7 +22,7 @@
     "Add": "+ Add",
     "Degree": "Degree",
     "School": "School",
-    "CertificateName": "Certificate Name",
+    "CourseName": "Course Name",
     "Organization": "Organization",
     "Year": "Year",
     "Save": "Save Changes",
