--- a/frontend/app/locales/en/experience.json
+++ b/frontend/app/locales/en/experience.json
@@ -4,6 +4,6 @@
   "sections": {
     "experience": "Work Experience",
     "education": "Education",
-    "certifications": "Certifications"
+    "courses": "Courses"
   }
 }
