--- a/frontend/app/locales/fa/dashboard.json
+++ b/frontend/app/locales/fa/dashboard.json
@@ -12,7 +12,7 @@
     "Title": "ویرایش تجربه و تحصیلات",
     "Experiences": "تجربه‌ها",
     "Education": "تحصیلات",
-    "Certifications": "گواهینامه‌ها",
+    "Courses": "دوره‌ها",
     "TitlePlaceholder": "عنوان",
     "Company": "شرکت",
     "Period": "دوره زمانی",
@@ -22,7 +22,7 @@
     "Add": "+ افزودن",
     "Degree": "مدرک تحصیلی",
     "School": "دانشگاه یا مدرسه",
-    "CertificateName": "نام گواهینامه",
+    "CourseName": "نام دوره",
     "Organization": "سازمان صادرکننده",
     "Year": "سال",
     "Save": "ذخیره تغییرات",
