--- a/frontend/app/locales/fa/experience.json
+++ b/frontend/app/locales/fa/experience.json
@@ -4,6 +4,6 @@
   "sections": {
     "experience": "تجربه کاری",
     "education": "تحصیلات",
-    "certifications": "گواهینامه‌ها"
+    "courses": "دوره‌ها"
   }
 }
