auth working fine now

--- a/frontend/app/locales/en/login.json
+++ b/frontend/app/locales/en/login.json
@@ -9,5 +9,8 @@
   "logout_confirm_title": "Are you sure you want to logout?",
   "logout_confirm_description": "You will be redirected to the login page and will need to authenticate again.",
   "cancel": "Cancel",
-  "confirm_logout": "Logout"
+  "confirm_logout": "Logout",
+  "credentialsInfo": "Enter your credentials to access the admin panel",
+  "passwordLabel": "Password",
+  "secureAccessInfo": "Secure admin access • Protected by encryption"
 }
