skeleton in projects editor changed

--- a/frontend/app/locales/en/dashboard.json
+++ b/frontend/app/locales/en/dashboard.json
@@ -17,7 +17,7 @@
     "Company": "Company",
     "Period": "Period",
     "Description": "Description",
-    "Technologies": "Technologies (comma separated)",
+    "Technologies": "Technologies",
     "Remove": "Remove",
     "Add": "+ Add",
     "Degree": "Degree",
