--- a/frontend/app/locales/fa/dashboard.json
+++ b/frontend/app/locales/fa/dashboard.json
@@ -17,7 +17,7 @@
     "Company": "شرکت",
     "Period": "دوره زمانی",
     "Description": "توضیحات",
-    "Technologies": "تکنولوژی‌ها (با کاما جدا کنید)",
+    "Technologies": "تکنولوژی‌ها",
     "Remove": "حذف",
     "Add": "+ افزودن",
     "Degree": "مدرک تحصیلی",
