--- a/frontend/app/locales/fa/login.json
+++ b/frontend/app/locales/fa/login.json
@@ -12,5 +12,12 @@
   "confirm_logout": "خروج",
   "credentialsInfo": "لطفاً اطلاعات خود را برای دسترسی به پنل مدیریت وارد کنید",
   "passwordLabel": "رمز عبور",
-  "secureAccessInfo": "دسترسی امن به مدیریت • محافظت شده با رمزگذاری"
+  "secureAccessInfo": "دسترسی امن به مدیریت • محافظت شده با رمزگذاری",
+  "usernameLabel": "نام کاربری",
+  "enterUsername": "نام کاربری خود را وارد کنید",
+  "errors": {
+    "INVALID_CREDENTIALS": "نام کاربری یا رمز عبور اشتباه است.",
+    "INTERNAL_ERROR": "خطای داخلی سرور، لطفاً بعداً دوباره تلاش کنید.",
+    "UNKNOWN_ERROR": "خطای غیرمنتظره‌ای رخ داده است."
+  }
 }
