--- a/frontend/app/locales/fa/dashboard.json
+++ b/frontend/app/locales/fa/dashboard.json
@@ -109,7 +109,7 @@
     "SavingChanges": "در حال ذخیره‌سازی..."
   },
   "skills": {
-    "title": "ویرایش مهارت‌ها",
+    "title": "ویرایشگر مهارت‌ها",
     "addCategory": "افزودن دسته‌بندی",
     "removeCategory": "حذف دسته‌بندی",
     "addSkill": "افزودن مهارت",
@@ -117,9 +117,15 @@
     "save": "ذخیره تغییرات",
     "skillName": "نام مهارت",
     "skillLevel": "سطح",
+    "proficiency": "مهارت",
+    "beginner": "مبتدی",
+    "intermediate": "متوسط",
+    "advanced": "پیشرفته",
+    "expert": "حرفه‌ای",
+    "saving": "در حال ذخیره...",
     "error": "خطا در بارگذاری مهارت‌ها",
-    "successUpdate": "مهارت‌ها با موفقیت ذخیره شدند.",
-    "errorUpdate": "ذخیره مهارت‌ها با خطا مواجه شد."
+    "successUpdate": "مهارت‌ها با موفقیت به‌روزرسانی شدند.",
+    "errorUpdate": "به‌روزرسانی مهارت‌ها با خطا مواجه شد."
   },
   "projects": {
     "Title": "ویرایش پروژه‌ها",
