changes in ui of editors

--- a/frontend/app/locales/en/dashboard.json
+++ b/frontend/app/locales/en/dashboard.json
@@ -11,8 +11,10 @@
     "RecentExperiences": "Recent Experiences",
     "Title": "Experience & Education Editor",
     "Experiences": "Experiences",
+    "Experience": "Experience",
     "Education": "Education",
     "Courses": "Courses",
+    "Course": "Course",
     "TitlePlaceholder": "Title",
     "Company": "Company",
     "Period": "Period",
@@ -132,12 +134,21 @@
   },
   "projects": {
     "Title": "Projects Editor",
+    "Project": "Project",
     "PlaceholderTitle": "Project Title",
     "PlaceholderDescription": "Description",
     "PlaceholderImage": "Image URL",
     "PlaceholderLiveUrl": "Live URL",
     "PlaceholderGithubUrl": "GitHub URL",
     "PlaceholderTechnologies": "Technologies (comma separated)",
+    "LiveUrl": "Live URL",
+    "Description": "Description",
+    "Technologies": "Technologies",
+    "UploadProjectImage": "Upload project image",
+    "ImageUploadSuccess": "Image uploaded successfully",
+    "ImageUploadError": "Failed to upload image",
+    "ImageDeleteSuccess": "Image deleted successfully",
+    "ImageDeleteError": "Failed to delete image",
     "AddProject": "+ Add Project",
     "RemoveProject": "Remove Project",
     "Save": "Save Changes",
