--- a/frontend/app/locales/fa/dashboard.json
+++ b/frontend/app/locales/fa/dashboard.json
@@ -11,8 +11,10 @@
     "RecentExperiences": "تجربه های اخیر",
     "Title": "ویرایش تجربه و تحصیلات",
     "Experiences": "تجربه‌ها",
+    "Experience": "تجربه‌",
     "Education": "تحصیلات",
     "Courses": "دوره‌ها",
+    "Course": "دوره",
     "TitlePlaceholder": "عنوان",
     "Company": "شرکت",
     "Period": "دوره زمانی",
@@ -132,12 +134,21 @@
   },
   "projects": {
     "Title": "ویرایش پروژه‌ها",
+    "Project": "پروژه",
     "PlaceholderTitle": "عنوان پروژه",
     "PlaceholderDescription": "توضیحات پروژه",
     "PlaceholderImage": "آدرس تصویر",
     "PlaceholderLiveUrl": "لینک نمایش زنده",
     "PlaceholderGithubUrl": "لینک گیت‌هاب",
     "PlaceholderTechnologies": "تکنولوژی‌ها (با کاما جدا کنید)",
+    "LiveUrl": "لینک نمایش زنده",
+    "Description": "توضیحات",
+    "Technologies": "تکنولوژی‌ها",
+    "UploadProjectImage": "بارگذاری تصویر پروژه",
+    "ImageUploadSuccess": "تصویر با موفقیت بارگذاری شد",
+    "ImageUploadError": "بارگذاری تصویر با خطا مواجه شد",
+    "ImageDeleteSuccess": "تصویر با موفقیت حذف شد",
+    "ImageDeleteError": "حذف تصویر با خطا مواجه شد",
     "AddProject": "+ افزودن پروژه",
     "RemoveProject": "حذف پروژه",
     "Save": "ذخیره تغییرات",
